# domain/entities/transaction.go
@@ -3,6 +3,7 @@ package entities
 import (
 	"time"
 
+	"github.com/bekha-io/openbank/domain/types"
 	"github.com/shopspring/decimal"
 )
 
@@ -14,12 +15,13 @@ const (
 )
 
 type Transaction struct {
-	ID            uint              `json:"id"`
-	FromAccountId uint              `json:"from_account_id"`
-	ToAccountId   uint              `json:"to_account_id"`
-	Status        TransactionStatus `json:"status"`
-	StatusReason  string            `json:"status_reason"`
-	Comment       string            `json:"comment"`
-	Amount        decimal.Decimal   `json:"amount"`
-	CreatedAt     time.Time         `json:"created_at"`
+	ID            uint                      `json:"id"`
+	FromAccountId uint                      `json:"from_account_id"`
+	Category      types.TransactionCategory `json:"category"`
+	ToAccountId   uint                      `json:"to_account_id"`
+	Status        TransactionStatus         `json:"status"`
+	StatusReason  string                    `json:"status_reason"`
+	Comment       string                    `json:"comment"`
+	Amount        decimal.Decimal           `json:"amount"`
+	CreatedAt     time.Time                 `json:"created_at"`
 }
